# Amplify

./: .gitignore  CLAUDE.md  DEV.md  Makefile  README.md  debug-manifests.yaml  debug.yaml  docker-compose.dev.yaml  helmfile.yaml
ai-gateway/: AiGateway.sln  (+3 more)
template-service/: .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
template-service/backend_template/: auth.py  config.py  database.py
template-service/backend_template/engine/: .env.example  config.py  database.py  execution.py  folder_paths.py  main.py  nodes.py  server.py
template-service/backend_template/entities/: ambassador.py  brand.py  engine.py  events.py  job.py  library_template.py  manual_review.py  product.py  project_template.py
template-service/backend_template/models/: __init__.py  ambassador.py  brand.py  common.py  job.py  library_template.py  manual_review_task.py  node_execution.py  node_result_cache.py  product.py  project_template.py  template_version.py
template-service/backend_template/repositories/: __init__.py  ambassador.py  base.py  brand.py  library_template.py  manual_review_task.py  product.py  project_template.py
template-service/backend_template/services/: __init__.py  ambassador.py  brand.py  engine_client.py  job.py  job_consumer.py  library_template.py  manual_review.py  product.py  project_template.py  veo_regen.py
template-service/backend_template/temporal/: .env.example  cache.py  client.py  node_policies.py  registry.py  worker.py
template-service/backend_template/utils/: broker.py  graph.py
template-service/backend_template/web/: app.py
template-service/charts/: Chart.yaml
template-service/migrations/: env.py
template-service/scripts/: entrypoint-api.sh  entrypoint-engine.sh  entrypoint-worker.sh  entrypoint.sh  export_spec.py
template-service/tests/: test_remap_node_ids.py
(+1599 files in other folders)
