[project]
name = "template-service"
version = "0.1.0"
description = ""
authors = [
    {name = "Alexandr Shevchenko",email = "alexandrshevchenko13@mail.ru"}
]
readme = "README.md"
requires-python = "^3.11"
dependencies = [
    "fastapi (>=0.128.0,<0.129.0)",
    "uvicorn[standard] (>=0.40.0,<0.41.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)",
    "sqlalchemy (>=2.0.45,<3.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "alembic (>=1.18.1,<2.0.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "aiohttp (>=3.13.3,<4.0.0)",
    "google-auth (>=2.48.0,<3.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "packaging (>=26.0,<27.0)",
    "Pillow (>=12.0.0,<13.0.0)",
    "tqdm (>=4.67.0,<5.0.0)",
    "aio-pika (>=9.0.0,<10.0.0)"
]

[tool.poetry]
packages = [
    { include = "scripts" }
]

[tool.poetry.scripts]
export-spec = "scripts.export_spec:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "isort (>=7.0.0,<8.0.0)"
]
